Switch to Java 8, add unit tests, change datasource